examples/good/00-Hello.tms
void main () {
  printString("hello world");
  return;
}