examples/bad/01-UnknownType.tms
void main () {
  char x = 's';
  return;
}